syntax = "proto3";

package api.product.v1;

import "api/types/types.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "eshop/api/product/v1;v1";

// Default settings for generating swagger documents
// NOTE: because json does not support 64 bits, the int64 and uint64 types under *.swagger.json are automatically converted to string types
// Reference https://github.com/grpc-ecosystem/grpc-gateway/blob/db7fbefff7c04877cdb32e16d4a248a024428207/examples/internal/proto/examplepb/a_bit_of_everything.proto  
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "localhost:30180"
  base_path: ""
  info: {
    title: "product api docs";
    version: "2.0";
  }
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
  security_definitions: {
    security: {
      key: "BearerAuth";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "Authorization";
        description: "Type Bearer your-jwt-token to Value";
      }
    }
  }
};

service product {
  // create product
  rpc Create(CreateProductRequest) returns (CreateProductReply) {
    option (google.api.http) = {
      post: "/api/v1/product"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "create product",
      description: "submit information to create product",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }

  // delete product by id
  rpc DeleteByID(DeleteProductByIDRequest) returns (DeleteProductByIDReply) {
    option (google.api.http) = {
      delete: "/api/v1/product/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "delete product",
      description: "delete product by id",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }

  // update product by id
  rpc UpdateByID(UpdateProductByIDRequest) returns (UpdateProductByIDReply) {
    option (google.api.http) = {
      put: "/api/v1/product/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "update product",
      description: "update product by id",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }

  // get product by id
  rpc GetByID(GetProductByIDRequest) returns (GetProductByIDReply) {
    option (google.api.http) = {
      get: "/api/v1/product/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "get product detail",
      description: "get product detail by id",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }

  // list of product by query parameters
  rpc List(ListProductRequest) returns (ListProductReply) {
    option (google.api.http) = {
      post: "/api/v1/product/list"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "list of products by parameters",
      description: "list of products by paging and conditions",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }
}

// Some notes on defining fields under message:
// (1) Fill in the validate rules https://github.com/envoyproxy/protoc-gen-validate#constraint-rules
// (2) When using the protoc-gen-openapiv2 plugin, if the defined fields are snake case,
//      you must add annotations for snake case names, such as string foo_bar = 1 [json_name = "foo_bar"],
//      to ensure that the front end and back end JSON naming is consistent.
// (3) If the route contains the path parameter, such as /api/v1/product/{id}, the defined
//      message  must contain the name of the path parameter and the name should be
//      added with a new tag, such as int64 id = 1 [(tagger.tags) = "uri:\"id\""];
// (4) If the request url is followed by a query parameter, such as /api/v1/getProduct?name=Tom,
//      a form tag must be added when defining the query parameter in the message,
//      such as string name = 1 [(tagger.tags) = "form:\"name\""];


message CreateProductRequest {
	string name = 1;  // 商品名称
	int32 price = 2;  // 商品价格
	string photo = 3;  // 商品图片
	string description = 4;  // 商品描述
}

message CreateProductReply {
  uint64 id = 1;
}

message DeleteProductByIDRequest {
  uint64 id =1 [(validate.rules).uint64.gt = 0, (tagger.tags) = "uri:\"id\""];
}

message DeleteProductByIDReply {

}

message UpdateProductByIDRequest {
	uint64 id = 1 [(tagger.tags) = "uri:\"id\"" ]; 
	string name = 2;  // 商品名称
	int32 price = 3;  // 商品价格
	string photo = 4;  // 商品图片
	string description = 5;  // 商品描述
}

message UpdateProductByIDReply {

}

message Product {
	uint64 id = 1; 
	string createdAt = 2; 
	string updatedAt = 3; 
	string name = 4;  // 商品名称
	int32 price = 5;  // 商品价格
	string photo = 6;  // 商品图片
	string description = 7;  // 商品描述
}

message GetProductByIDRequest {
  uint64 id =1 [(validate.rules).uint64.gt = 0, (tagger.tags) = "uri:\"id\"" ];
}

message GetProductByIDReply {
  Product product = 1;
}

message ListProductRequest {
  api.types.Params params = 1;
}

message ListProductReply {
  int64 total =1;
  repeated Product products = 2;
}


